Fixes to fake world (#506)
bump gradle and forge versions (min forge is recommended build)
update fake world and chunk classes
make substitution blocks smarter in c6155de
preview will now respect surrounding biomes in full update (after rotate/mirror change)
general cleanup removing most warnings (just 2 deprecations left)